<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_33"
            android:layout_marginStart="@dimen/dp_33"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login"
            android:textColor="@color/basic_blue"
            android:textSize="@dimen/sp_20" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dp_87"
            android:layout_height="@dimen/dp_87"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_14"
            android:src="@drawable/main_icon_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_27"
            android:gravity="center_horizontal"
            android:text="@string/login_welcome"
            android:textColor="@color/basic_blue"
            android:textSize="@dimen/sp_20" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_username" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_60"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_18">


                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_40"
                    android:background="@null"
                    android:hint="@string/point_input_username"
                    android:paddingBottom="@dimen/dp_4"
                    android:paddingLeft="@dimen/dp_14"
                    android:paddingRight="@dimen/dp_14"
                    android:textColorHint="#999999"
                    android:inputType="textVisiblePassword"
                    android:textCursorDrawable="@drawable/shape_cursor_color"
                    android:textSize="@dimen/sp_12" />


                <View
                    style="@style/line"
                    android:layout_height="@dimen/dp_1"
                    android:layout_alignEnd="@id/et_username"
                    android:layout_alignRight="@id/et_username"
                    android:layout_below="@id/et_username"
                    android:background="@color/basic_blue" />
            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_40"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_password" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_60"
                android:layout_marginLeft="@dimen/dp_18"
                android:layout_marginRight="@dimen/dp_60"
                android:layout_marginStart="@dimen/dp_18">


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_40"
                    android:layout_marginRight="@dimen/dp_40"
                    android:background="@null"
                    android:hint="@string/point_input_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dp_4"
                    android:paddingLeft="@dimen/dp_14"
                    android:paddingRight="@dimen/dp_14"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@drawable/shape_cursor_color"
                    android:textSize="@dimen/sp_12" />


                <View
                    style="@style/line"
                    android:layout_height="@dimen/dp_1"
                    android:layout_alignEnd="@id/et_password"
                    android:layout_alignRight="@id/et_password"
                    android:layout_below="@id/et_password"
                    android:background="@color/basic_blue" />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_40">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_icon_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_icon_verifi" />

            <LinearLayout
                android:layout_marginLeft="18dp"
                android:layout_centerVertical="true"
                android:id="@+id/ll_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_icon_verification"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/point_input_verification"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="@dimen/dp_14"
                    android:paddingRight="@dimen/dp_14"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@drawable/shape_cursor_color"
                    android:textSize="@dimen/sp_12" />

                <View
                    android:layout_marginTop="@dimen/dp_4"
                    android:id="@+id/line"
                    style="@style/line"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/basic_blue" />
            </LinearLayout>

            <ImageView
                android:layout_marginLeft="@dimen/dp_10"
                android:id="@+id/iv_create_verification"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ll_et"
                android:onClick="refreshVerificationCode"
                android:textColor="@color/basic_blue"
                tools:src="@drawable/selector_tab_history" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@id/iv_create_verification"
                android:onClick="refreshVerificationCode"
                android:text="@string/refresh"
                android:textColor="@color/basic_blue"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tv_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_70"
            android:layout_marginStart="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_40"
            android:drawableLeft="@drawable/selector_auto_login"
            android:drawablePadding="@dimen/dp_30"
            android:drawableStart="@drawable/selector_auto_login"
            android:gravity="center_vertical"
            android:onClick="isAutoLogin"
            android:text="@string/auto_login"
            android:textColor="@color/basic_blue"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:onClick="login"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_87"
            android:paddingRight="@dimen/dp_87"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/login_immediately"
            android:textColor="#ffffff"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>
</ScrollView>